// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bash set to false does not render $ sign 1`] = `
.c0 {
  box-sizing: border-box;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c4:focus-visible,
.teleport-button__force-focus-visible .c4 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c4:hover,
.teleport-button__force-hover .c4 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c4:active,
.teleport-button__force-active .c4 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c4:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c3 {
  display: flex;
}

<div>
  <div
    class="c0 c1"
    color="light"
  >
    <div
      class="c2 c3"
      style="word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
    >
      <div>
        some text to be copied
      </div>
    </div>
    <button
      class="c4"
      fill="filled"
      style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
    >
      Copy
    </button>
  </div>
</div>
`;

exports[`default, renders $ sign 1`] = `
.c0 {
  box-sizing: border-box;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c4 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c5 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c5:focus-visible,
.teleport-button__force-focus-visible .c5 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c5:hover,
.teleport-button__force-hover .c5 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c5:active,
.teleport-button__force-active .c5 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c5:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c3 {
  display: flex;
}

<div>
  <div
    class="c0 c1"
    color="light"
  >
    <div
      class="c2 c3"
      style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
    >
      <div
        class="c4"
        style="user-select: none;"
      >
        $
      </div>
      <div>
        some bash command
      </div>
    </div>
    <button
      class="c5"
      fill="filled"
      style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
    >
      Copy
    </button>
  </div>
</div>
`;
